Fix overflow with biiiggg words

--- a/static_workspace/scss/modules/_timeline.scss
+++ b/static_workspace/scss/modules/_timeline.scss
@@ -172,6 +172,9 @@
 
           &-txt {
             @include padding(30px 30px 30px 30px);
+            word-wrap: break-word;
+            overflow: overlay;
+
             .twitter-handle {
               font-size: 14px;
               font-weight: $bold;
